tabs fix bug 391 - label should align left - font size 20pt - font weight medium

--- a/src/assets/examples/tab-group-animations/tab-group-animations.component.css
+++ b/src/assets/examples/tab-group-animations/tab-group-animations.component.css
@@ -4,3 +4,11 @@
   margin-right: 40px;
   text-align: left;
 }
+
+
+h3 {
+  padding-left: 40px;
+  text-align: left;
+  font-weight: 500;
+  font-size: 20px;
+}
